<resources>
    <string name="toolbar_title">HOME</string>

    <!--app by java-->
    <string name="app_name">Techfest 2k17</string>
    <string name="camera">Open Camera</string>
    <string name="music">Play Music</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="toast">Toast</string>
    <string name="click_me">Click me</string>
    <string name="done">Done</string>
    <string name="intro">I am cortana. What\'s Your name?</string>
    <string name="welcome">Hi there</string>
    <string name="order">this will be toasted!!</string>
    <string name="what_would_you_like_me_to_do_today">What would you like me to do today?</string>
    <string name="hello_world">HELLO WORLD</string>
    <string-array name="LeftmenuItems">
        <item>Menu Item 0</item>
        <item>Menu Item 1</item>
        <item>Menu Item 2</item>
        <item>Menu Item 3</item>
        <item>Menu Item 4</item>
    </string-array>
    <string-array name="RightmenuItems">
        <item>Right Menu Item 0</item>
        <item>Right Menu Item 1</item>
        <item>Right Menu Item 2</item>
        <item>Right Menu Item 3</item>
        <item>Right Menu Item 4</item>
    </string-array>
    <string name="title_activity_app_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Techfest app-->
    <string name="compi">COMPETITIONS</string>
    <string name="tech">TECHNOHOLIX</string>
    <string name="ideate">IDEATE</string>
    <string name="workshop">WORKSHOPS</string>
    <string name="initiatives">INITIATIVES</string>
    <string name="ozone">OZONE</string>
    <string name="summit">SUMMIT</string>
    <string name="lectures">LECTURES</string>
    <string name="exhibitions">EXHIBITIONS</string>
    <string name="world_mun">WORLD MUN</string>
    <string name="cyclothon">CYCLOTHON</string>
    <string name="sponsers">SPONSERS</string>

    <string name="author">Nautatva Navlakha</string>
    <string name="email">nnautatva@gmail.com</string>
    <string name="scanQR">Scan QR Code</string>
    <string name="map">Show the map of IIT Bombay</string>
    <string name="schedule">Schedule of the events held</string>
    <string name="fav">favourites</string>

    <string name="inbox">inbox</string>
    <string name="starred">starred</string>
    <string name="subheader">subheader</string>
    <string name="all_email">email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_venue">Event Venue</string>
    <string name="time">Event TIme</string>
    <string name="event_info">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of letrashet sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Adlus Pagemaker including versions of Lorem Ipsum.</string>
    <string name="event_description">Lorem Ipsum has been the industry\\\'s standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of letrashet sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Adlus Pagemaker including versions of Lorem Ipsum.</string>
</resources>
