<?xml version="1.0" encoding="utf-8"?>
<android.support.design.internal.BottomNavigationItemView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--The bottom bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:paddingBottom="10dp"
        android:background="#212A33">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/map_bottom"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="@string/map"
                android:src="@drawable/map" />

            <ImageView
                android:id="@+id/QR_bottom"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="@string/scanQR"
                android:src="@drawable/qrscan" />

            <ImageView
                android:id="@+id/schedule_bottom"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="@string/schedule"
                android:src="@drawable/schedule" />

            <ImageView
                android:id="@+id/favorite_bottom"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:contentDescription="@string/fav"
                android:src="@drawable/favorites" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.internal.BottomNavigationItemView>