
    <!--The full front activity box-->
    <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.nautatvanavlakha.abcd.HomeFragment"
     android:baselineAligned="false"
     android:orientation="vertical"
     android:paddingBottom="20dp"
     android:fitsSystemWindows="true"
     android:paddingStart="5dp"
     android:paddingEnd="5dp"
     android:paddingTop="30dp"
     android:background="#212A33">

        <!--master layout 1-->
        <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="NestedWeights">

        <!--compi-->
        <LinearLayout
            android:id="@+id/compi"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="end"
            tools:ignore="NestedWeights">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/compi"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@drawable/cup_2_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/compi"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!--technoholix-->
        <LinearLayout
            android:id="@+id/technoholix"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:contentDescription="@string/tech"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/tech"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@drawable/vinyl_2_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/tech"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!--Ideate-->
        <LinearLayout
            android:id="@+id/ideate"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/ideate"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@drawable/lightbulb_2_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/ideate"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

        <!--Master layout 2-->
        <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!--workshop-->
        <LinearLayout
            android:id="@+id/workshop"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:contentDescription="@string/workshop"
                android:src="@drawable/pen_2_"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/workshop"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!--initiative-->
        <LinearLayout
            android:id="@+id/initiative"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@drawable/power_2_"
                android:contentDescription="@string/initiatives"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/initiatives"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!--ozone-->
        <LinearLayout
            android:id="@+id/ozone"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@drawable/joypad_2_"
                android:contentDescription="@string/ozone"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/ozone"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

        <!--master layout 3-->
        <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!--summit-->
        <LinearLayout
            android:id="@+id/summit"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:src="@drawable/_x39__2_"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/summit"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/summit"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!--lectures-->
        <LinearLayout
            android:id="@+id/lectures"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:contentDescription="@string/lectures"
                android:src="@drawable/user_2_"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/lectures"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!--exhibitions-->
        <LinearLayout
            android:id="@+id/exibitions"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@drawable/pic_2_"
                android:contentDescription="@string/exhibitions"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/exhibitions"
                android:textColor="#ffffff" />

        </LinearLayout>
    </LinearLayout>

        <!--master layout 4-->
        <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!--world mun-->
        <LinearLayout
            android:id="@+id/mun"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:contentDescription="@string/world_mun"
                android:src="@drawable/ic_language_24px"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/world_mun"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!--cyclothon-->
        <LinearLayout
            android:id="@+id/cyclothon"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:contentDescription="@string/cyclothon"
                android:src="@drawable/ic_directions_bike_24px"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/cyclothon"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!--sponsers-->
        <LinearLayout
            android:id="@+id/sponsers"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:contentDescription="@string/sponsers"
                android:src="@drawable/_x24__2_"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/sponsers"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

<!--</FrameLayout>-->
