<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurr"
    android:orientation="vertical"

    tools:context="com.example.nautatvanavlakha.abcd.EventFragment">

    <!-- TODO: Update blank fragment layout -->
    <include layout="@layout/custom_toolbar" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/small_rect"
        android:orientation="vertical"
        android:layout_gravity="center">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EVENT_NAME"
            android:textSize="40sp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:src="@drawable/ic_place_black_24dp"
                android:tint="#FFFFFF" />

            <TextView
                android:id="@+id/event_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/location_icon"
                android:layout_toEndOf="@id/location_icon"
                android:fontFamily="sans-serif-light"
                android:paddingStart="8dp"
                android:text="@string/event_venue"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/clock_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_icon"
        android:paddingStart="32dp"
        android:paddingTop="8dp"
        android:src="@drawable/ic_access_time_black_24dp"
        android:tint="#FFFFFF" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingStart="8dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize='20sp' />
</LinearLayout>


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clock_icon"
            android:paddingEnd="8dp"
            android:paddingStart="32dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/event_info"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </ScrollView>
    </LinearLayout>


</LinearLayout>
